--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,9 @@
   margin: 0;
   padding: 0; }
 
+a:hover {
+  color: #5A7E70; }
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px; }
@@ -54,11 +57,11 @@ img {
 .boton {
   background: #B06B88;
   margin-top: 0.5rem;
-  color: #fff;
+  color: #fff !important;
   text-decoration: none; }
 
 .shadow-bottom {
-  box-shadow: 0px 15px 10px -15px #6BA4B0; }
+  box-shadow: 0px 15px 10px -15px; }
 
 .aside-flex {
   display: flex;
@@ -368,7 +371,7 @@ footer {
   .principal-nav .navbar-nav {
     background: #fff;
     height: 90vh;
-    border: 1px rgba(0, 0, 0, 0.3) groove; } }
+    border: 1px rgba(0, 0, 0, 0.7) groove; } }
 
 @media screen and (max-width: 768px) {
   .flex_options, footer .container .row .footer_logo, footer .container .row .footer_logo img, footer .container .row .footer_rrss, footer .container .row .footer_contacto {
