--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,9 @@
 a:hover {
   color: #5A7E70; }
 
+p {
+  text-align: justify; }
+
 /* width */
 ::-webkit-scrollbar {
   width: 10px; }
@@ -161,7 +164,7 @@ header .principal-nav {
   max-width: 250px; }
   .producto:hover {
     opacity: 1;
-    transform: scale(1.2); }
+    transform: scale(1.1); }
     .producto:hover > .producto_info {
       display: block;
       opacity: 1;
@@ -179,6 +182,8 @@ header .principal-nav {
     .producto .producto_info .producto_info_precioCompra {
       align-content: center;
       align-items: center; }
+      .producto .producto_info .producto_info_precioCompra .producto_info_precioCompra_precio {
+        text-align: center; }
   .producto .producto_comprar {
     position: absolute;
     top: 0;
