--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,6 +22,10 @@ a:hover {
     color:$color_fondo-hover;    
 }
 
+p {
+    text-align: justify;
+}
+
 /* width */
 ::-webkit-scrollbar {
     width: 10px;
@@ -121,6 +125,7 @@ a:hover {
     #filtroProductos .navbar-toggler {
         display: none;
     }
+    
 
 /* Header */
     header{
@@ -242,7 +247,7 @@ a:hover {
         max-width: map-get($map: $anchos, $key: max-item);
         &:hover {
             opacity: 1;
-            transform: scale(1.2);
+            transform: scale(1.1);
 
             & > .producto_info {
                 display: block;
@@ -269,6 +274,9 @@ a:hover {
             .producto_info_precioCompra {
                 align-content: center;
                 align-items: center;
+                .producto_info_precioCompra_precio {
+                    text-align: center;
+                }
             }
         }
 
